add scriptService and 1st attempt with dispenseCOntroller

--- a/src/main/resources/templates/dispense.html
+++ b/src/main/resources/templates/dispense.html
@@ -22,6 +22,8 @@
      <p th:text="'Consult Date: ' + ${consult.consultDate}"/>
      <p th:text="'Reservation Number: ' + ${consult.reservationNumber}"/>
 
+	
+
     <br>
 
     <h2>Dispense Details</h2>
@@ -73,6 +75,25 @@
    </table>
 	
 	<br>
+	
+    <br>
+	<h2>Script</h2>
+      <form action="#" th:action="@{'/patient/' + ${patient.patientId} + '/consult/' + ${consult.consultId}}" method="post" th:object="${script}">
+       <table border="1" cellpadding="10px" cellspacing="5px">    
+       <tr>    
+              <th>Left Eye</th>    
+              <th>Right Eye</th>    
+       </tr>   
+       <tr>
+              <td> <input type="text" th:field="${script.leftEye}" /></td>
+              <td> <input type="text" th:field="${script.rightEye}" /></td>
+       </tr>
+       <tr>
+              <td><input type="submit" value="Add Script" /></td>
+	      <td> <input type="reset" value="Reset" /></td>
+       </tr>
+       </table>	  
+     </form>
 	
 	<a href="/new_patient">Add New Patient</a> <br>
         <a href="/patients">Patients</a>
