--- a/src/main/resources/templates/consult.html
+++ b/src/main/resources/templates/consult.html
@@ -82,12 +82,14 @@
 			<thead>
 				<th>Consult Date</th>
 				<th>Reservation Number</th>
+				<th>left eye</th>
 				<th>dispense details</th>
 
 			</thead>
 			<tr th:each="consult: ${patient.consults}">
 				<td th:text="${consult.consultDate}"></td>
 				<td th:text="${consult.reservationNumber}"></td>
+				<td th:text="${consult.script.leftEye}"></td>
 				<td><a
 					th:href="@{/patient/{pid}/consult/{cid}(pid=${patient.patientId},cid=${consult.consultId})}">Dispense
 						Details</a> <!--<a th:href="@{/patient/{id}(id=${patient.patientId})} + '/consult'">Consult</a>-->
