--- a/src/main/resources/templates/dispense.html
+++ b/src/main/resources/templates/dispense.html
@@ -24,6 +24,22 @@
 
 		<br>
 
+		<h2>Script</h2>
+		<table border="1" cellpadding="10px" cellspacing="5px">
+			<tr>
+				<th>Left Eye</th>
+				<th>Right Eye</th>
+				<th>PD</th>
+				<th>Add</th>
+			</tr>
+			<tr>
+				<td th:text="${consult.script.leftEye}" /></td>
+				<td th:text="${consult.script.rightEye}" /></td>
+				<td th:text="${consult.script.addition}" /></td>
+				<td th:text="${consult.script.pd}" /></td>
+			</tr>
+		</table>
+		<br>
 		<h2>Dispense Details</h2>
 
 
@@ -51,7 +67,7 @@
 			</table>
 		</form>
 		<br>
-		<h2>Dispensed</h2>
+		<h2>Dispensed Items</h2>
 
 		<!--<someHtmlTag th:each="item : ${items}">-->
 		<!--</someHtmlTag>-->
@@ -61,19 +77,22 @@
 				<th>Tariff Code</th>
 				<th>Item</th>
 				<th>Price</th>
+				<th>Delete</th>
 			</thead>
 			<tr th:each="dispense: ${consult.dispenses}">
 				<td th:text="${dispense.icd10}"></td>
 				<td th:text="${dispense.tariffCode}"></td>
 				<td th:text="${dispense.dispenseItem}"></td>
 				<td th:text="${dispense.price}"></td>
+				<td><a
+					th:href="@{/delete/patient/{pid}/consult/{cid}/dispense/{did}(pid=${patient.patientId},cid=${consult.consultId},did=${dispense.dispenseId})}">Delete</a></td>
 			</tr>
 			<tr>
-				<td> Total </td>
-				<td> &nbsp; </td>
-				<td> &nbsp; </td>
-				<td th:text="${totalPerConsult}"> </td>
-				
+				<td>Total</td>
+				<td>&nbsp;</td>
+				<td>&nbsp;</td>
+				<td th:text="${totalPerConsult}"></td>
+
 			</tr>
 			<!--<tr th:each="consult: ${patient.consults}" >-->
 			<!--<td th:text="${consult.consultDate}"> </td>-->
