--- a/src/main/resources/templates/consult.html
+++ b/src/main/resources/templates/consult.html
@@ -80,13 +80,16 @@
 		<!--</someHtmlTag>-->
 		<table border="1" cellpadding="10px" cellspacing="5px">
 			<thead>
+				<th>delete</th>
 				<th>Consult Date</th>
 				<th>Reservation Number</th>
 				<th>dispense details</th>
-				<th>delete consults</th>
 
 			</thead>
 			<tr th:each="consult: ${patient.consults}">
+				<td align="center"><a 
+				    th:href="@{/delete/patient/{pid}/consult/{cid}(pid=${patient.patientId},cid=${consult.consultId})}">x</a>
+			    </td>
 				<td th:text="${consult.consultDate}"></td>
 				<td th:text="${consult.reservationNumber}"></td>
 
@@ -94,9 +97,6 @@
 					th:href="@{/patient/{pid}/consult/{cid}(pid=${patient.patientId},cid=${consult.consultId})}">Dispense
 						Details</a> <!--<a th:href="@{/patient/{id}(id=${patient.patientId})} + '/consult'">Consult</a>-->
 				</td>
-				<td align="center"><a 
-				    th:href="@{/delete/patient/{pid}/consult/{cid}(pid=${patient.patientId},cid=${consult.consultId})}">x</a>
-				    </td>
 			</tr>
 		</table>
 
