--- a/src/main/resources/templates/dispense.html
+++ b/src/main/resources/templates/dispense.html
@@ -22,8 +22,12 @@
 		<p th:text="'Consult Date: ' + ${consult.consultDate}" />
 		<p th:text="'Reservation Number: ' + ${consult.reservationNumber}" />
 
-		<br>
 
+        <a th:href="@{/patient/{id}(id=${patient.patientId})} + '/consult'"> Back to Consult</a>
+	
+		<br>
+		<br>
+		
 		<h2>Script</h2>
 		<table border="1" cellpadding="10px" cellspacing="5px">
 			<tr>
@@ -73,22 +77,24 @@
 		<!--</someHtmlTag>-->
 		<table border="1" cellpadding="10px" cellspacing="5px">
 			<thead>
+				<th>Delete</th>
 				<th>ICD10</th>
 				<th>Tariff Code</th>
 				<th>Item</th>
 				<th>Price</th>
-				<th>Delete</th>
 			</thead>
 			<tr th:each="dispense: ${consult.dispenses}">
+				<td align="center"><a
+					th:href="@{/delete/patient/{pid}/consult/{cid}/dispense/{did}(pid=${patient.patientId},cid=${consult.consultId},did=${dispense.dispenseId})}">x</a>
+				</td>
 				<td th:text="${dispense.icd10}"></td>
 				<td th:text="${dispense.tariffCode}"></td>
 				<td th:text="${dispense.dispenseItem}"></td>
 				<td th:text="${dispense.price}"></td>
-				<td><a
-					th:href="@{/delete/patient/{pid}/consult/{cid}/dispense/{did}(pid=${patient.patientId},cid=${consult.consultId},did=${dispense.dispenseId})}">Delete</a></td>
 			</tr>
 			<tr>
 				<td>Total</td>
+				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td>&nbsp;</td>
 				<td th:text="${totalPerConsult}"></td>
@@ -100,8 +106,9 @@
 			<!--</tr>-->
 		</table>
 
-		<br> <a href="/new_patient">Add New Patient</a> <br> <a
-			href="/patients">Patients</a>
+		<br> 
+		<a href="/new_patient">Add New Patient</a> <br> 
+		<a href="/patients">Patients</a> <br>
 	</div>
 </body>
 </html>
