update consult details (consultDate and reservationDate)

--- a/src/main/resources/templates/consult.html
+++ b/src/main/resources/templates/consult.html
@@ -25,7 +25,7 @@
 
 		<br>
 
-		<h2>Consult Details</h2>
+		<h2>Visit Details</h2>
 
 		<form action="#"
 			th:action="@{'/consult/' + ${patient.patientId} + '/dispense'}"
@@ -72,7 +72,7 @@
 
 
 
-		<h2>Previous Consults</h2>
+		<h2>Previous Visits</h2>
 
 
 
