--- a/src/main/resources/templates/consult.html
+++ b/src/main/resources/templates/consult.html
@@ -2,12 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-	crossorigin="anonymous">
 <meta charset="ISO-8859-1"></meta>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" 
+      rel="stylesheet" 
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" 
+      crossorigin="anonymous">
 
 <title>Consult Details</title>
 <!--<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
@@ -78,18 +77,22 @@
 
 		<!--<someHtmlTag th:each="item : ${items}">-->
 		<!--</someHtmlTag>-->
-		<table border="1" cellpadding="10px" cellspacing="5px">
+		<table class="table table-striped" >
 			<thead>
 				<th>delete</th>
+				<th>edit</th>
 				<th>Consult Date</th>
 				<th>Reservation Number</th>
 				<th>dispense details</th>
 
 			</thead>
 			<tr th:each="consult: ${patient.consults}">
-				<td align="center"><a 
+				<td align="left"><a 
 				    th:href="@{/delete/patient/{pid}/consult/{cid}(pid=${patient.patientId},cid=${consult.consultId})}">x</a>
 			    </td>
+			    <td>
+                    <a th:href="@{/edit/patient/{pid}/consult/{cid}/(pid=${patient.patientId},cid=${consult.consultId})}"> Edit Consult Details</a>
+				</td>
 				<td th:text="${consult.consultDate}"></td>
 				<td th:text="${consult.reservationNumber}"></td>
 
