--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 	<head>
-<meta charset="utf-8"/>
+<meta charset="ISO-8859-1"></meta>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" 
