--- a/src/main/resources/templates/dispense.html
+++ b/src/main/resources/templates/dispense.html
@@ -13,8 +13,6 @@
 <!--<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
 </head>
 <body>
-<body>
-	<div align="left">
 
 		<h2>Patient Consult Detail</h2>
 		<p th:text="'Patient Name: ' + ${patient.patientName}" />
@@ -22,96 +20,109 @@
 		<p th:text="'Consult Date: ' + ${consult.consultDate}" />
 		<p th:text="'Reservation Number: ' + ${consult.reservationNumber}" />
 
-        <a th:href="@{/edit/patient/{pid}/consult/{cid}/(pid=${patient.patientId},cid=${consult.consultId})}"> Edit Consult Details</a>
-	
-		<br>
-		<br>
-		
+		<a
+			th:href="@{/edit/patient/{pid}/consult/{cid}/(pid=${patient.patientId},cid=${consult.consultId})}">
+			Edit Consult Details</a> <br> <br>
+
 		<h2>Script</h2>
-		<table class="table table-striped table-sm">
-			<tr>
-				<th>Left Eye</th>
-				<th>Right Eye</th>
-				<th>PD</th>
-				<th>Add</th>
-			</tr>
-			<tr>
-				<td th:text="${consult.script.leftEye}" /></td>
-				<td th:text="${consult.script.rightEye}" /></td>
-				<td th:text="${consult.script.addition}" /></td>
-				<td th:text="${consult.script.pd}" /></td>
-			</tr>
-		</table>
-		
-		
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-7">
+					<table class="table table-bordered">
+						<tr>
+							<th>Left Eye</th>
+							<th>Right Eye</th>
+							<th>PD</th>
+							<th>Add</th>
+						</tr>
+						<tr>
+							<td th:text="${consult.script.leftEye}" /></td>
+							<td th:text="${consult.script.rightEye}" /></td>
+							<td th:text="${consult.script.addition}" /></td>
+							<td th:text="${consult.script.pd}" /></td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
 		<br>
 		<h2>Dispense Details</h2>
 
 
 		<!--<form action="#" th:action="@{'/dispense/' + ${consult.consultId}}" method="post" th:object="${dispense}">-->
-		<form action="#"
-			th:action="@{'/patient/' + ${patient.patientId} + '/consult/' + ${consult.consultId}}"
-			method="post" th:object="${dispense}">
-			<table class="table table-striped" border="1" cellpadding="10px" cellspacing="5px">
-				<tr>
-					<th>ICD10</th>
-					<th>Tariff Code</th>
-					<th>Item</th>
-					<th>Price</th>
-				</tr>
-				<tr>
-					<td><input type="text" th:field="${dispense.icd10}" /></td>
-					<td><input type="text" th:field="${dispense.tariffCode}" /></td>
-					<td><input type="text" th:field="${dispense.dispenseItem}" /></td>
-					<td><input type="text" th:field="${dispense.price}" /></td>
-				</tr>
-			</table>
-			<table>
-			    <tr>
-					<td><input type="submit" value="Add Item" /></td>
-					<td><input type="reset" value="Reset" /></td>
-				</tr>
-			</table>
-		</form>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-7">
+					<form action="#"
+						th:action="@{'/patient/' + ${patient.patientId} + '/consult/' + ${consult.consultId}}"
+						method="post" th:object="${dispense}">
+						<table class="table table-bordered">
+							<tr>
+								<th>ICD10</th>
+								<th>Tariff Code</th>
+								<th>Item</th>
+								<th>Price</th>
+							</tr>
+							<tr>
+								<td><input type="text" th:field="${dispense.icd10}" /></td>
+								<td><input type="text" th:field="${dispense.tariffCode}" /></td>
+								<td><input type="text" th:field="${dispense.dispenseItem}" /></td>
+								<td><input type="text" th:field="${dispense.price}" /></td>
+							</tr>
+						</table>
+						<table>
+							<tr>
+								<td><input type="submit" value="Add Item" /></td>
+								<td><input type="reset" value="Reset" /></td>
+							</tr>
+						</table>
+					</form>
+				</div>
+			</div>
+		</div>
 		<br>
 		<h2>Dispensed Items</h2>
 
 		<!--<someHtmlTag th:each="item : ${items}">-->
 		<!--</someHtmlTag>-->
-		<table class="table table-striped" border="1" cellpadding="10px" cellspacing="5px">
-			<thead>
-				<th>Delete</th>
-				<th>ICD10</th>
-				<th>Tariff Code</th>
-				<th>Item</th>
-				<th>Price</th>
-			</thead>
-			<tr th:each="dispense: ${consult.dispenses}">
-				<td align="left"><a
-					th:href="@{/delete/patient/{pid}/consult/{cid}/dispense/{did}(pid=${patient.patientId},cid=${consult.consultId},did=${dispense.dispenseId})}">x</a>
-				</td>
-				<td th:text="${dispense.icd10}"></td>
-				<td th:text="${dispense.tariffCode}"></td>
-				<td th:text="${dispense.dispenseItem}"></td>
-				<td th:text="${dispense.price}"></td>
-			</tr>
-			<tr>
-				<td>Total</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td th:text="${totalPerConsult}"></td>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-sm-7">
+					<table class="table table-bordered"> 
+						<thead>
+							<th>ICD10</th>
+							<th>Tariff Code</th>
+							<th>Item</th>
+							<th>Price</th>
+							<th>Delete</th>
+						</thead>
+						<tr th:each="dispense: ${consult.dispenses}">
+							<td th:text="${dispense.icd10}"></td>
+							<td th:text="${dispense.tariffCode}"></td>
+							<td th:text="${dispense.dispenseItem}"></td>
+							<td th:text="${dispense.price}"></td>
+							<td align="left"><a
+								th:href="@{/delete/patient/{pid}/consult/{cid}/dispense/{did}(pid=${patient.patientId},cid=${consult.consultId},did=${dispense.dispenseId})}">x</a>
+							</td>
+						</tr>
+						<tr>
+							<td>Total</td>
+							<td>&nbsp;</td>
+							<td>&nbsp;</td>
+							<td th:text="${totalPerConsult}"></td>
+							<td>&nbsp;</td>
 
-			</tr>
-			<!--<tr th:each="consult: ${patient.consults}" >-->
-			<!--<td th:text="${consult.consultDate}"> </td>-->
-			<!--<td th:text="${consult.reservationNumber}"></td>-->
-			<!--</tr>-->
-		</table>
+						</tr>
+						<!--<tr th:each="consult: ${patient.consults}" >-->
+						<!--<td th:text="${consult.consultDate}"> </td>-->
+						<!--<td th:text="${consult.reservationNumber}"></td>-->
+						<!--</tr>-->
+					</table>
+				</div>
+			</div>
+		</div>
 
-		<br> 
-		<a href="/new_patient">Add New Patient</a> <br> 
-		<a href="/patients">Patients</a> <br>
-	</div>
+					<br> <a href="/new_patient">Add New Patient</a> <br> <a
+						href="/patients">Patients</a> <br>
 </body>
 </html>
