validate dob and add datepicker to thymeleaf form - incl consult

--- a/src/main/resources/templates/consult.html
+++ b/src/main/resources/templates/consult.html
@@ -36,7 +36,7 @@
 					<th>Reservation Number</th>
 				</tr>
 				<tr>
-					<td><input type="text" th:field="${consult.consultDate}" /></td>
+					<td><input type="date" th:field="${consult.consultDate}" /></td>
 					<td><input type="text" th:field="${consult.reservationNumber}" /></td>
 				</tr>
 				<tr>
