--- a/src/main/resources/templates/edit_consult.html
+++ b/src/main/resources/templates/edit_consult.html
@@ -37,7 +37,7 @@
 					<th>Reservation Number</th>
 				</tr>
 			    <tr>
-					<td><input type="text" th:field="*{consultDate}" /></td>
+					<td><input type="date" th:field="*{consultDate}" /></td>
 					<td><input type="text" th:field="*{reservationNumber}" /></td>
 				</tr>
 				<tr>
