--- a/bin/src/main/resources/templates/edit_consult.html
+++ b/bin/src/main/resources/templates/edit_consult.html
@@ -91,7 +91,7 @@
 				<td align="center"><a 
 				    th:href="@{/delete/patient/{pid}/consult/{cid}(pid=${patient.patientId},cid=${consult.consultId})}">x</a>
 			    </td>
-				<td th:text="${#dates.format(consult.consultDate, 'yyyy-MM-dd')}"></td>
+				<td th:text="${consult.consultDate}"></td>
 				<td th:text="${consult.reservationNumber}"></td>
 
 				<td><a
